--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://link.coupang.com/a/c5uB9h" />
+    <meta http-equiv="refresh" content="0; url=https://link.coupang.com/a/dcrSm4" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>잠시 후 링크로 이동합니다. <a href="https://link.coupang.com/a/c5uB9h">클릭</a>해도 이동할 수 있어요.</p>
+    <p>잠시 후 링크로 이동합니다. <a href="https://link.coupang.com/a/dcrSm4">클릭</a>해도 이동할 수 있어요.</p>
   </body>
 </html>
